feat: update API client to version 2.0.0-20260429080405
